Translate2 - Org/src/objects/AccountMaster__c.object
<CustomObject>
    <description>Master of account items</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>前受付金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>プラン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>室料</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>朝食</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕食</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CodeNumbers__c</fullName>
        <formula>if ( CONTAINS(Field3__c, &apos;P&apos;)  = true, 0,  IF (LEN(Field3__c) =4, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>商品コード桁数が4桁のときは、１を返す</inlineHelpText>
        <label>$商品コード桁数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>#DP</label>
        <referenceTo>DP__c</referenceTo>
        <relationshipName>Account71c4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimateFieldNo__c</fullName>
        <inlineHelpText>宴会手配書に表示する商品の順番で数字を入力してください</inlineHelpText>
        <label>見積項目#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>小計割引／割増</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>ﾌﾘｰ宣言</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipName>AccountmasterVXNd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field13_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>同一メニューで単価の異なるマスタをつなげるため、たとえば、朝食の単価¥2,000、¥3,000の切り替えのため</inlineHelpText>
        <label>$会計マスタ</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipName>Accountb142_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>集計先変更定義</inlineHelpText>
        <label>#GP</label>
        <referenceTo>GP__c</referenceTo>
        <relationshipName>AccountzeBO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genkaritsu__c</fullName>
        <formula>if ( StsTaxfee__c = &quot;0&quot; , if (Field5__c &lt;&gt; 0, Field7__c / SalesnoneTax__c , 1), 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>税ステータスが非課税のとき、原価/売価、課税は、原価/売価（税抜)</inlineHelpText>
        <label>$原価率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KD__c</fullName>
        <label>KD表示文字背景色</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjoKamokuRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計科目</label>
        <referenceTo>KanjoKamoku__c</referenceTo>
        <relationshipName>KanjoKamokuRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OES__c</fullName>
        <label>OES用ﾒﾆｭｰ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計OP</label>
        <referenceTo>OP__c</referenceTo>
        <relationshipName>AccountMasterSUow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLU__c</fullName>
        <label>PLUｺｰﾄﾞ</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductEnName__c</fullName>
        <label>商品名称（英）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>if (  StsTaxfee__c  = &quot;0&quot;,  SalesnoneTax__c  -  Field7__c ,  Field5__c -  Field7__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売価-原価、税ステータスありなら、売価/1.05-原価</inlineHelpText>
        <label>$粗利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_5__c</fullName>
        <inlineHelpText>セットメニューのインデックス番号、セットメニュー群は最大50個まで</inlineHelpText>
        <label>SCP(5)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesnoneTax__c</fullName>
        <formula>if ( StsTaxfee__c = &quot;0&quot;, if ( MOD(Field5__c,(1 + TaxRateCal__c)) = 0, Field5__c /(1 + TaxRateCal__c), if ( ROUND(MOD(Field5__c,(1 + TaxRateCal__c)),2) &gt;= 0.30, ROUND(Field5__c /(1 + TaxRateCal__c),0), Field5__c /(1 + TaxRateCal__c) )), Field5__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>会計明細の$単価(税抜)</inlineHelpText>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>特別税</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StsTaxfee__c</fullName>
        <inlineHelpText>0: 課税 99:非課税</inlineHelpText>
        <label>税ｽﾃｰﾀｽ</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRateCal__c</fullName>
        <formula>jmstRef__r.TaxRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>消費税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>名称1(ｶﾅ)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_2__c</fullName>
        <label>名称3(漢2)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_3__c</fullName>
        <label>名称4(漢3)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detail13__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>セットメニューに金額の内訳をセットする対象かどうかチェックを入れてください</inlineHelpText>
        <label>セット</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jmstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>消費税マスタ</label>
        <referenceTo>JMST__c</referenceTo>
        <relationshipName>jmst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nextitemcode__c</fullName>
        <formula>VALUE(  IF(TEXT(ActionType__c) == &quot;プラン&quot;, Mid(Field3__c, 2, Len(Field3__c)-1), Field3__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$商品コード</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proftPer__c</fullName>
        <formula>1 -  Genkaritsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$粗利益率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>会計商品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field3__c</columns>
        <columns>NAME</columns>
        <columns>OP__c</columns>
        <columns>GPChange__c</columns>
        <columns>SCP_5__c</columns>
        <columns>Field4__c</columns>
        <columns>Field7__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>Genkaritsu__c</columns>
        <columns>StsTaxfee__c</columns>
        <columns>CodeNumbers__c</columns>
        <columns>DPChange__c</columns>
        <columns>detail13__c</columns>
        <columns>jmstRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>名称2(漢1)</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>